Fix Scrollbar/Header Issues

--- a/resources/main.css
+++ b/resources/main.css
@@ -59,7 +59,6 @@ body {
     max-width: 1600px;
     background-color: var(--secondMain);
     transition: background-color 500ms;
-    overflow: hidden;
     margin: 0 auto;
 }
 
@@ -70,6 +69,7 @@ body>* {
 }
 
 #sidebar {
+    position: fixed;
     background-color: var(--sidebar-back);
     width: 25%;
     min-width: 18em;
@@ -77,13 +77,14 @@ body>* {
     font-size: .875rem;
     flex: 0 0 auto;
     padding-top: 50px;
+    overflow-y: auto;
     /* transition: width 200ms, height 200ms, min-width 500ms, opacity 200ms; */
 }
 
 .header {
+    position: fixed;
     display: flex;
     flex-direction: row;
-    position: fixed;
     top: 0;
     z-index: 1;
     background-color: var(--sidebar-back);
@@ -323,7 +324,8 @@ main {
     padding-top: 3em;
     flex: 1 1 auto;
     transition: background-color 500ms;
-    margin-left: 3em;
+    padding-left: 28%;
+    height: 100%;
 }
 
 
@@ -706,7 +708,7 @@ dt a:hover {
     position: relative;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
     .collapse {
         left: 19em;
         top: 3em;
@@ -729,7 +731,6 @@ dt a:hover {
     }
 
     #sidebar {
-        position: absolute;
         z-index: 0;
     }
 
